# sipacker-ua

./: Cargo.toml  README.md  dump_rtp.txt  notes.txt
sipacker/: Cargo.toml  README.md
sipacker/src/: app.rs  lib.rs  main.rs  sipacker.rs
sipacker/src/app/: application.rs  args.rs  cli_input.rs  command.rs  commands.rs
sipacker/src/sipacker/: audio.rs  call.rs  invite_acceptor_layer.rs  outbound_call.rs  registrator.rs  user_agent.rs  user_agent_event.rs
src/: lib.rs  main.rs
src/app/: application.rs
src/sipacker/: registration.rs  registrator.rs  user_agent.rs
