[workspace]
resolver = "2"

members = ["sipacker"]

[workspace.package]
authors = ["oyavorovych"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
internal = { package = "ezk-internal", version = "0.2.0", path = "../ezk/sip/internal" }
sip-auth = { package = "ezk-sip-auth", version = "0.3.0", path = "../ezk/sip/sip-auth" }
sip-core = { package = "ezk-sip-core", version = "0.6.0", path = "../ezk/sip/sip-core" }
sip-types = { package = "ezk-sip-types", version = "0.4.0", path = "../ezk/sip/sip-types" }
sip-ua = { package = "ezk-sip-ua", version = "0.6.0", path = "../ezk/sip/sip-ua" }

ice = { package = "ezk-ice", version = "0.1.0", path = "../ezk/media/ice" }
rtp = { package = "ezk-rtp", version = "0.3.0", path = "../ezk/media/rtp" }
sdp-types = { package = "ezk-sdp-types", version = "0.5.0", path = "../ezk/media/sdp-types" }
stun = { package = "ezk-stun", version = "0.4.0", path = "../ezk/media/stun" }
stun-types = { package = "ezk-stun-types", version = "0.3.0", path = "../ezk/media/stun-types" }

ezk-internal = { package = "ezk-internal", version = "0.2.0", path = "../ezk/sip/internal" }
ezk-sip-core = { package = "ezk-sip-core", version = "0.6.0", path = "../ezk/sip/sip-core" }
ezk-sip-types = { package = "ezk-sip-types", version = "0.4.0", path = "../ezk/sip/sip-types" }
ezk-sip-ua = { package = "ezk-sip-ua", version = "0.6.0", path = "../ezk/sip/sip-ua" }

rustls-pki-types = { version = "1", features = ["std"] }
tokio-native-tls = { version = "0.3" }
tokio-rustls = { version = "0.26", default-features = false }
