[workspace]
resolver = "2"

members = ["sipacker"]

[workspace.package]
authors = ["oyavorovych"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
ezk-internal = { package = "ezk-internal", version = "0.2.0", path = "../ezk/sip/internal" }
ezk-rtc = { package = "ezk-rtc", version = "0.1.0", path = "../ezk/media/rtc" }
ezk-rtc-proto = { package = "ezk-rtc-proto", version = "0.1.0", path = "../ezk/media/rtc-proto" }
ezk-sip-core = { package = "ezk-sip-core", version = "0.6.0", path = "../ezk/sip/sip-core" }
ezk-sip-types = { package = "ezk-sip-types", version = "0.4.0", path = "../ezk/sip/sip-types" }
ezk-sip-ua = { package = "ezk-sip-ua", version = "0.6.0", path = "../ezk/sip/sip-ua" }
ezk-sip = { package = "ezk-sip", version = "0.1.0", path = "../ezk/sip/sip" }
ezk-sip-auth = { package = "ezk-sip-auth", version = "0.3.0", path = "../ezk/sip/sip-auth" }
ezk-sdp-types = { package = "ezk-sdp-types", version = "0.5.0", path = "../ezk/media/sdp-types" }
ezk-session = { package = "ezk-session", version = "0.1.0", path = "../ezk/media/session" }
ezk-rtp = { package = "ezk-rtp", version = "0.3.0", path = "../ezk/media/rtp" }

ezk-g711 = { package = "ezk-g711", version = "0.2.0", path = "../ezk-media/crates/ezk-g711" }