[package]
name = "sipacker_ua"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
async-trait = "0.1.86"
bytes = "1.10.0"
bytesstr = "1.0.2"
cpal = "0.15.3"
dasp_sample = "0.11.0"
ffmpeg-next = "7.1.0"
rand = "0.9.0"
rubato = "0.16.1"
tokio = "1.43.0"
typed-builder = "0.20.0"
simple-error = "0.3.1"

env_logger = { version="0.11.6", features = ["unstable-kv"] }
log = { version="0.4.26", features = ["kv"] }

ezk-internal = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6"}
ezk-rtp = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6" }
ezk-sdp-types = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6"  }
ezk-session = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6"  }
ezk-sip-core = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6" }
ezk-sip-types = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6" }
ezk-sip-ua = { git = "https://github.com/kbalt/ezk", rev = "1f18c326df3244ce7b6461ad22919dec70ee7bc6" }

ezk-g711 = { git = "https://github.com/kbalt/ezk-media.git", rev = "122d4a7ef1847a2919d9840ac83abc3ad7495aca" }